<!--
  ~ Copyright (C) 2020 The exTHmUI Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">About exTHmUI</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="menu_about_us">About us</string>
    <string name="menu_contributor">Contributor</string>
    <string name="menu_device_maintainer">Device maintainer</string>
    <string name="title_exthmui" translatable="false">exTHmUI</string>
    <string name="title_exthmui_contributors">exTHmUI Contributors List</string>
    <string name="aboutus_server_url" translatable="false">http://localhost/contributors.json</string>
    <string name="image_of_the_contributor_button">Image of the contributor button</string>
    <string name="snack_contributors_check_failed">Contributors check failed.</string>
    <string name="image_of_the_coolapk_button">Image of the CoolApk button</string>
    <string name="image_of_the_github_button">Image of the GitHub button</string>
    <string name="image_of_contributor_s_personal_website_button">Image of contributor\'s personal website button</string>
    <string name="contributor_dialog_title">Contact with me</string>
</resources>