<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2020 The exTHmUI Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/navigation_home">

    <fragment
            android:id="@+id/navigation_home"
            android:name="org.exthmui.aboutus.ui.home.HomeFragment"
            android:label="@string/menu_about_us"
            tools:layout="@layout/fragment_home"/>

    <fragment
            android:id="@+id/navigation_dashboard"
            android:name="org.exthmui.aboutus.ui.contributor.ContributorFragment"
            android:label="@string/menu_contributor"
            tools:layout="@layout/fragment_contributor"/>

    <fragment
            android:id="@+id/navigation_notifications"
            android:name="org.exthmui.aboutus.ui.device_maintainer.DeviceMaintainerFragment"
            android:label="@string/menu_device_maintainer"
            tools:layout="@layout/fragment_maintainer"/>
</navigation>